--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,10 @@
 <h1>{{title}}</h1>
 {{#if conocido}}
-    <p>Hola {{nombre}} <a href="/salir">Salir</a></p>
+    <h2>Hola {{nombre}} ! <a href="/salir">Salir</a></h2>
 {{/if}}
 
 {{#unless conocido}}
-<p>No te conozco</p>
+<h2>Ingresá con tu usuario</h2>
 <form action="/ingresar" method="post">
     <input type="text" name="nombre"><button>Ingresar</button>
 </form>
